--- a/src/pages/PatientConsent.css
+++ b/src/pages/PatientConsent.css
@@ -27,3 +27,15 @@
 .add {
     align-self:auto;
 }
+
+.inputStyles {
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid blue;
+    font-weight: 700;
+}
+
+.rowC {
+    display: flex;
+    flex-direction: row;
+}
