--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #A8D0E6; 
+  /* background-color: #A8D0E6;  */
   width: 100%;
   height: 100%;
 }
