Fixed request consent bug and added constraints to avoid registeration with same credentials

--- a/src/Components/General/Menu.css
+++ b/src/Components/General/Menu.css
@@ -1,7 +1,8 @@
 .Tabs:hover{
     background-color: #151B54;
+    cursor: pointer;
 }
 
 .selected{
-    background-color: "black";
+    background-color: #151B54;
 }
