--- a/src/Components/PatientDashboard/Popup.css
+++ b/src/Components/PatientDashboard/Popup.css
@@ -1,4 +1,4 @@
-/* Popup style */
+/* Popup style
 .popup-box {
     position: relative;
     background: #00000050;
@@ -37,4 +37,4 @@
     border: 1px solid #999;
     font-size: 20px;
   }
-  
+   */
