--- a/src/pages/RequestConsent.css
+++ b/src/pages/RequestConsent.css
@@ -1,8 +1,8 @@
-body {
+/* body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: white;
   }
-  
+   */
   * {
     box-sizing: border-box;
   }
@@ -53,13 +53,13 @@ body {
   }
   
   /* Add a blue text color to links */
-  a {
+  /* a {
     color: dodgerblue;
   }
-  
+   */
   /* Set a grey background color and center the text of the "sign in" section */
-  .signin {
+  /* .signin {
     background-color: #f1f1f1;
     text-align: center;
   }
-  
+   */
