--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -5,7 +5,7 @@
     margin-left: 550px;
     margin-top: 40px;
   }
-  h1 {
+  /* h1 {
     margin-left: 100px;
     color: rgb(255, 255, 255);
   }
@@ -45,5 +45,5 @@
     padding-right: 3.3rem;
     margin-left: 5px;
     
-  }
+  } */
   
